# Mokuji_Summary

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/inspect/: route.ts
app/api/providers/: route.ts
app/api/session/: route.ts
app/api/settings/: route.ts
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  app_session.py  book.py  chapter.py  message.py  summary_snapshot.py  thread.py
backend/app/schemas/: books.py  common.py  settings.py
backend/app/services/: books.py  prompts.py  session.py  settings.py
backend/app/services/extractors/: base.py  parser.py  service.py
backend/app/services/providers/: base.py  claude.py  codex.py  gemini.py  registry.py  shared.py
backend/tests/: test_parser.py
docs/: architecture.md
fixtures/: oreilly-japan-sample.html  oreilly-sample.html
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: settings-drawer.tsx  url-entry-screen.tsx  workspace-screen.tsx
frontend/lib/: api.ts  types.ts
infra/: compose.yml
src/: cli.ts  oreilly.test.ts  provider-shared.test.ts
src/components/: app-shell.tsx
src/lib/: google-oauth.ts  next-route.ts  oreilly.ts  process.ts  prompt.ts  service.ts  session.ts  settings.ts  types.ts
(+10 files in other folders)
