[project]
name = "mokuji-backend"
version = "0.1.0"
description = "Book table-of-contents chat backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "beautifulsoup4>=4.13.5",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.11.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.10",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
